--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -8,8 +8,5 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instence:
-      prefer-ip-address: true
-      metadata-map:
-        my-metadata: 自定义元数据
+      defaultZone: http://192.168.31.240:8761/eureka/
+
